--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.0",
@@ -18,9 +20,12 @@
     "@types/eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.56.0",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.30.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0-next.4",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.0.0-next.1",
@@ -31,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "valibot": "^0.30.0"
   }
 }
