--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "sass": "^1.74.1",
     "valibot": "^0.30.0"
   }
